refactor: simplify CORS configuration by moving allowed origins to method parameter and using List.of for method lists