@@ -13,11 +13,10 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:5173,http://localhost:80,http://localhost,http://127.0.0.1:3000,http://127.0.0.1:5173,http://127.0.0.1:80,http://localhost:*,http://127.0.0.1:*}")
-    private String allowedOrigins;
-
     @Bean
-    public CorsWebFilter corsWebFilter() {
+    public CorsWebFilter corsWebFilter(
+            @Value("${cors.allowed-origins:http://localhost:3000,http://localhost:5173,http://localhost:80,http://localhost,http://127.0.0.1:3000,http://127.0.0.1:5173,http://127.0.0.1:80,http://localhost:*,http://127.0.0.1:*}")
+            String allowedOrigins) {
         CorsConfiguration corsConfig = new CorsConfiguration();
 
         List<String> origins = Arrays.stream(allowedOrigins.split(","))
@@ -27,9 +26,9 @@ public class CorsConfig {
 
         corsConfig.setAllowedOriginPatterns(origins.isEmpty() ? List.of("*") : origins);
         corsConfig.setMaxAge(3600L);
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         corsConfig.setAllowedHeaders(List.of("*"));
-        corsConfig.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "X-User-Id", "X-User-Role", "X-User-Email"));
+        corsConfig.setExposedHeaders(List.of("Authorization", "Content-Type", "X-User-Id", "X-User-Role", "X-User-Email"));
         corsConfig.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
